# pollux

./: .gitignore  Cargo.toml  Design.md  LICENSE  README.md  flake.nix  justfile
examples/: rabbitmq_workers.rs  sqs_workers.rs
src/: lib.rs  message_processor.rs  message_receiver.rs  worker_pool.rs
